# normalcraft

./: Cargo.toml  Sprite-0001.aseprite  cobble.aseprite  dirt.aseprite  sand.aseprite  stone.aseprite  water.aseprite
src/: camera.rs  instance.rs  main.rs  mesh.rs  mesh_instancer.rs  renderer.rs  shader.wgsl  text.rs  text.wgsl  texture.rs  world.rs
