[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
env_logger = "0.9.3"
freetype-rs = "0.26.0"
fxhash = "0.2.1"
glam = "0.22.0"
image = "0.24.5"
noise = "0.8.2"
pollster = "0.2.5"
rand = "0.8.5"
wgpu = "0.14.0"
winit = "0.27.5"
